# hex1b

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Directory.Build.props  README.md  THIRD-PARTY-NOTICES.txt  apphost.cs  doc-writer skill.md  dropdown-bug.ansi  mapscii-demo.cast  opencode.jsonc  scrollback-demo.html  table-demo-capture.ansi  test-after-fix.ansi  test-ctrl-binding.csx  test-emoji-width.sh  test-menu-state.ansi  test-output.txt  test-tabledemo-before.ansi  windowing-demo-2.ansi  windowing-demo-capture-1.txt  windowing-demo-capture-2.txt  windowing-demo-capture-table.ansi  windowing-demo-capture.ansi
.devcontainer/: Dockerfile  devcontainer.json
.github/scripts/: ProcessTestResults.cs
.github/workflows/: baseline-bump.yml  build-deploy.yml  copilot-setup-steps.yml  daily-tests.yml  delete-pr-environment.yml  pr-environment-cleanup.yml
benchmarks/Hex1b.Benchmarks/: Hex1b.Benchmarks.csproj  Program.cs  RenderingModeBenchmarks.cs  SurfaceBenchmarks.cs
docs/: child-process-arch.md  input-bindings.md  keybinding-portability.md  muxer-learnings.md  muxer-protocol.md  terminal.md
docs/perf/: baseline.md
eng/: TestSeq.cs  build-windows-pty-host.ps1
eng/scripts/: bump-package-validation-baseline.sh
samples/AccordionDemo/: Program.cs
samples/AgenticPromptDemo/: AgenticPromptDemo.csproj  Program.cs  SlashCommandPromptWidget.cs
samples/AnimationProof/: Program.cs
samples/AsciiEarth/: AsciiEarth.csproj  (+11 more)
src/Hex1b.PtyHost.Rust/: Cargo.toml
src/Hex1b.PtyHost.Rust/src/: conpty.rs  lib.rs  main.rs  protocol.rs
tests/: diag2-output.txt  test-output.txt
(+2518 files in other folders)
